--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -4,7 +4,7 @@
     <div cdkDropListGroup *ngIf="board; else createBoard" class="board-lists" cdkScrollable>
         <div class="drag-drop-container">
             <div class="board-list-header">
-                <h2>Backlog</h2>
+                <h3>Backlog</h3>
                 <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
                     <mat-icon>menu</mat-icon>
                 </button>
@@ -37,17 +37,30 @@
             </div>
         </div>
         <ng-container *ngFor="let list of board.lists;let i = index;">
+
             <div class="drag-drop-container">
                 <div class="board-list-header">
-                    <h2 #listTitleElem>{{list.name}}</h2>
-                    <app-content-editable (valueToEditChange)="updateListName($event, list)" [elementViewClick]="true" [valueToEdit]="list.name"
-                        [elementView]="listTitleElem" [elementViewDisplay]="'block'"></app-content-editable>
-                    <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
-                        <mat-icon>menu</mat-icon>
-                    </button>
-                    <mat-menu #menu="matMenu">
-                        <button (click)="deleteList(list.id)" mat-menu-item>Delete List</button>
-                    </mat-menu>
+                    <div style="display: flex; align-items: center;">
+                        <button (click)="setPosition(list, -1)" aria-label="Move List" *ngIf="i != 0" mat-icon-button class="move-list">
+                            <mat-icon>arrow_left</mat-icon>
+                        </button>
+                        <h3 #listTitleElem>{{list.name}}</h3>
+                        <app-content-editable (valueToEditChange)="updateListName($event, list)"
+                            [elementViewClick]="true" [valueToEdit]="list.name" [elementView]="listTitleElem"
+                            [elementViewDisplay]="'block'"></app-content-editable>
+
+                    </div>
+                    <div style="display: flex;">
+                        <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
+                            <mat-icon>menu</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu">
+                            <button (click)="deleteList(list.id)" mat-menu-item>Delete List</button>
+                        </mat-menu>
+                        <button *ngIf="i != board.lists.length - 1" (click)="setPosition(list, 1)" aria-label="Move List" mat-icon-button class="move-list">
+                            <mat-icon>arrow_right</mat-icon>
+                        </button>
+                    </div>
                 </div>
 
                 <div [style.background]="list.tasks && list.tasks.length ? '#E7E7E7' : 'white'"
