--- a/src/app/shared/shared-components/task/task.component.html
+++ b/src/app/shared/shared-components/task/task.component.html
@@ -10,7 +10,7 @@
     </mat-menu> -->
 </div>
 
-<h3>{{task.title}}</h3>
+<h3>{{task.title}} Position: {{task.position}} Id: {{task.id}}</h3>
 
 <p>{{task.description}}</p>
 
