--- a/src/app/shared/shared-components/form-field/form-field.component.html
+++ b/src/app/shared/shared-components/form-field/form-field.component.html
@@ -1,27 +1,27 @@
 <mat-form-field appearance="outline">
     <mat-label *ngIf="labelName">{{labelName}}</mat-label>
 
-    <input *ngIf="inputType == 'input' && type != 'tel'" [required]="required" maxlength="100"
+    <input *ngIf="inputType === 'input' && type !== 'tel'" [required]="required" maxlength="100"
         minlength="{{minLength || 0}}" (focus)="resetErrorState()" [autocomplete]="autocomplete"
         [attr.type]="type || 'text'" matInput [formControl]="$any(control)" [errorStateMatcher]="customMatcher">
 
-    <input (input)="handleInputPhoneNumber($any($event))" *ngIf="inputType == 'input' && type == 'tel'" [required]="required" maxlength="100"
+    <input (input)="handleInputPhoneNumber($any($event))" *ngIf="inputType === 'input' && type === 'tel'" [required]="required" maxlength="100"
         minlength="{{minLength || 0}}" (focus)="resetErrorState()" [autocomplete]="autocomplete"
         [attr.type]="type || 'text'" matInput [formControl]="$any(control)" [errorStateMatcher]="customMatcher">
 
-    <textarea (blur)="$any($event.target).style.height = '100px'" (focus)="$any($event.target).style.height = '300px'" (input)="autoGrowTextZone($event)" *ngIf="inputType == 'text-area'" [required]="required" maxlength="500"
+    <textarea (blur)="$any($event.target).style.height = '100px'" (focus)="$any($event.target).style.height = '300px'" (input)="autoGrowTextZone($event)" *ngIf="inputType === 'text-area'" [required]="required" maxlength="500"
         minlength="{{minLength || 0}}" (focus)="resetErrorState()" [autocomplete]="autocomplete"
         [attr.type]="type || 'text'" matInput [formControl]="$any(control)"
         [errorStateMatcher]="customMatcher"></textarea>
 
-    <mat-select [multiple]="multiple" *ngIf="inputType == 'select'" [required]="required" (focus)="resetErrorState()"
+    <mat-select [multiple]="multiple" *ngIf="inputType === 'select'" [required]="required" (focus)="resetErrorState()"
         [formControl]="$any(control)" [errorStateMatcher]="customMatcher">
         <mat-option [value]="option.valueOnSelect" *ngFor="let option of options">
             <div [innerHTML]="(option.html || option.displayValue) | sanitizeHtml"></div>
         </mat-option>
     </mat-select>
 
-    <div class="input-color" *ngIf="inputType == 'color'">
+    <div class="input-color" *ngIf="inputType === 'color'">
         <input (focus)="resetErrorState()" [autocomplete]="autocomplete" [required]="required" matInput
             [ngxMatColorPicker]="picker" [formControl]="$any(control)" [disabled]="false"
             [errorStateMatcher]="customMatcher">
@@ -30,12 +30,12 @@
     </div>
 
 
-    <input [min]="today" *ngIf="inputType == 'date'" [formControl]="$any(control)" [errorStateMatcher]="customMatcher"
+    <input [min]="today" *ngIf="inputType === 'date'" [formControl]="$any(control)" [errorStateMatcher]="customMatcher"
         (focus)="resetErrorState()" [autocomplete]="autocomplete" [required]="required" matInput
         [matDatepicker]="picker">
-    <mat-datepicker-toggle (click)="resetErrorState()" *ngIf="inputType == 'date'" matIconSuffix
+    <mat-datepicker-toggle (click)="resetErrorState()" *ngIf="inputType === 'date'" matIconSuffix
         [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker [hidden]="inputType != 'date'" #picker></mat-datepicker>
+    <mat-datepicker [hidden]="inputType !== 'date'" #picker></mat-datepicker>
 
 
     <img *ngIf="suffixPath" matTextSuffix src="{{suffixPath}}" alt="">
