fix change detection on open addtaskdialog

--- a/src/app/admin/summary/summary.component.html
+++ b/src/app/admin/summary/summary.component.html
@@ -1,4 +1,10 @@
+<!-- <app-page-title title *ngIf="matchWebBreakpoint$ | async"></app-page-title> -->
 <app-card>
-    <!-- <app-page-title title *ngIf="matchWebBreakpoint$ | async"></app-page-title> -->
+    <header title>
+        Test
+        <p subtitle>Test</p>
+    </header>
+    <main>Test</main>
 
+    <footer footer>Footer</footer>
 </app-card>
