--- a/src/app/admin/summary/summary.component.scss
+++ b/src/app/admin/summary/summary.component.scss
@@ -1,4 +1,55 @@
-:host{
-    display: block;
+:host {
+    display: flex;
     padding: 16px 0;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: auto;
+    gap: 80px;
+    flex-wrap: wrap;
+}
+
+.counter-wrapper {
+    display: block;
+    width: -moz-fit-content;
+    width: fit-content;
+    min-width: 150px;
+    height: 150px;
+    flex-shrink: 0;
+}
+
+.counter {
+    text-align: center;
+    margin: 16px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.tasks-in-lists,
+.tasks-by-priority,
+.tasks-by-category {
+    display: flex;
+    width: 100%;
+    overflow: auto;
+    gap: 16px;
+    padding: 2px 0;
+}
+
+.summary-counts {
+    display: grid;
+    gap: 16px;
+    flex: 1;
+}
+
+.summary-greetings {
+    display: block;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-bottom: auto;
+    flex: 1;
+}
+
+.greeting-wrapper {
+    display: block;
 }
