--- a/src/app/shared/shared-components/dialogs/edit-contact/edit-contact.component.html
+++ b/src/app/shared/shared-components/dialogs/edit-contact/edit-contact.component.html
@@ -30,7 +30,6 @@
 
     <ng-container actions>
         <button mat-dialog-close mat-stroked-button color="primary">Cancel</button>
-        <button (click)="editContact()" [disabled]="editContactForm.invalid" mat-raised-button color="primary">Edit
-            Contact</button>
+        <button (click)="editContact()" [disabled]="editContactForm.invalid" mat-raised-button color="primary">Save</button>
     </ng-container>
 </app-dialog>
