--- a/src/app/shared/shared-components/card/card.component.html
+++ b/src/app/shared/shared-components/card/card.component.html
@@ -1,5 +1,6 @@
 <mat-card>
     <mat-card-header>
+        <ng-content select="[card-avatar]"></ng-content>
         <mat-card-title>
             <ng-content select="[title]"></ng-content>
         </mat-card-title>
@@ -8,6 +9,8 @@
             <ng-content select="[subtitle]"></ng-content>
         </mat-card-subtitle>
     </mat-card-header>
+
+    <ng-content select="[card-img]"></ng-content>
 
     <mat-card-content>
         <ng-content></ng-content>
