--- a/src/app/admin/profile/profile.component.scss
+++ b/src/app/admin/profile/profile.component.scss
@@ -19,7 +19,8 @@
 
 .profile-card {
     display: block;
-    max-width: 400px;
+    width: 80vw;
+    max-width: 600px;
     margin: auto;
     position: relative;
 }
@@ -28,4 +29,15 @@
     position: absolute;
     right: 0;
     top: 0;
+}
+
+.profile-title{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.profile-image{
+    margin: 0 auto;
+    cursor: pointer;
 }
