--- a/src/app/shared/shared-components/contact-details/contact-details.component.html
+++ b/src/app/shared/shared-components/contact-details/contact-details.component.html
@@ -1,4 +1,4 @@
-<app-contact-card [contact]="contact">
+<app-contact-card [showName]="false" [size]="'42px'" [contact]="contact">
     <button mat-button color="primary" (click)="addToTask()">
         <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M8.5 1V16" stroke="#29ABE2" stroke-width="2" stroke-linecap="round" />
