--- a/src/app/shared/shared-components/contact-initials/contact-initials.component.scss
+++ b/src/app/shared/shared-components/contact-initials/contact-initials.component.scss
@@ -1,24 +1,24 @@
 .host-container {
     flex-shrink: 0;
     border-radius: 100%;
-    width: 42px;
-    height: 42px;
-    font-size: 1rem;
+    width: 2em;
+    height: 2em;
+    font-size: 21px;
+    font-weight: bold;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 0px;
     gap: 10px;
-
     border: 1px solid #FFFFFF;
-
     text-transform: capitalize;
-
+    overflow: hidden;
 }
 
 .person-img{
-    width: 50%;
-    height: 50%;
-    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 100%;
 }
