--- a/src/app/shared/shared-components/dialog/dialog.component.scss
+++ b/src/app/shared/shared-components/dialog/dialog.component.scss
@@ -1,3 +1,11 @@
-mat-dialog-content{
+mat-dialog-content {
     padding-top: 6px !important;
+}
+
+.title-content {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+
+    padding: 20px 24px 20px 24px;
 }
