--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -24,10 +24,10 @@
                 <mat-icon>edit</mat-icon> Edit
             </button>
 
-            <button (click)="deactivateProfile()" aria-label="Deactivate Profile" type="button" mat-menu-item
+            <!-- <button (click)="deactivateProfile()" aria-label="Deactivate Profile" type="button" mat-menu-item
                 color="accent" title="Deactivate Profile">
                 <mat-icon>toggle_off</mat-icon> Deactivate
-            </button>
+            </button> -->
 
             <button (click)="deleteProfile()" aria-label="Delete Profile" type="button" mat-menu-item color="warn"
                 title="Delete Profile">
