--- a/src/app/admin/add-task/add-task.component.scss
+++ b/src/app/admin/add-task/add-task.component.scss
@@ -19,6 +19,7 @@
 
         button,
         a {
+            width: -moz-fit-content;
             width: fit-content;
         }
     }
@@ -45,9 +46,17 @@
     outline: 0px;
     border: 0px;
     border-bottom: 2px solid black;
-    &:active, &:focus, &:focus-visible {
+
+    &:active,
+    &:focus,
+    &:focus-visible {
         outline: 0px;
         border: 0px;
         border-bottom: 2px solid black;
     }
+}
+
+.subtasks-list{
+    height: 150px;
+    overflow: auto;
 }
