--- a/src/app/admin/authentication/reset-password/reset-password.component.html
+++ b/src/app/admin/authentication/reset-password/reset-password.component.html
@@ -31,7 +31,7 @@
         <app-form-field [errors]="[{name: 'required', htmlMessage: 'Password is <strong>required</strong>'},
             {name: 'minlength', htmlMessage: 'Password is <strong>to short</strong>'}]" [autocomplete]="'new-password'"
             [type]="'password'" [inputType]="'input'" [suffixPath]="'assets/password.svg'"
-            [control]="$any(resetPasswordForm.get('newPassword'))" [labelName]="'New Password'"
+            [control]="$any(resetPasswordForm.get('password'))" [labelName]="'New Password'"
             [minLength]="8"></app-form-field>
 
         <app-form-field [errors]="[{name: 'required', htmlMessage: 'Password is <strong>required</strong>'}]"
@@ -44,7 +44,7 @@
 
         <div class="simple-grid">
             <button [disabled]="resetPasswordForm.invalid" (click)="resetPassword()" mat-raised-button
-                color="primary">Sign Up</button>
+                color="primary">Reset Password</button>
         </div>
 
     </div>
