fix login logout redirects switch map and catchError order first map last catch

--- a/src/app/side/navigation/navigation.component.html
+++ b/src/app/side/navigation/navigation.component.html
@@ -1,1 +1,3 @@
-<app-router-link mat-button [route]="route" *ngFor="let route of routes"></app-router-link>
+<ng-container *ngFor="let route of routes">
+    <app-router-link *ngIf="route.title" mat-button [route]="route"></app-router-link>
+</ng-container>
